--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 .flex{
     display: flex;}
 
+header div,main div{
+    border: 1px dashed black;
+}
+
 header{
     background-color: lightblue;
     padding:10px 10%;}
@@ -14,7 +18,6 @@ header{
     background-color: orange;}
 
 .header_box>*{
-    border: 1px dashed black;
     padding: 5px;}
 
 .header_sx_dx{
