--- a/style.css
+++ b/style.css
@@ -60,6 +60,12 @@ section:first-child{
 .background_lightgrey{
     background-color: lightgrey;}
 
+.green_box{
+    width: 100%;
+    height: 400px;
+    margin: auto;
+    background-color: rgb(0, 128, 32);}
+
 
 
 
