--- a/style.css
+++ b/style.css
@@ -6,18 +6,19 @@
 .flex{
     display: flex;}
 
-header div,main div{
+.container{
+    width: 80%;
+    margin:auto;
+    padding: 15px 0;
+}
+.container div{
     border: 1px dashed black;}
 
 header{
-    background-color: lightblue;
-    padding:10px 10%;}
+    background-color: lightblue;}
 
 .header_box{
     background-color: orange;}
-
-.header_box>*{
-    padding: 5px;}
 
 .header_sx_dx{
     width: 20%;}
@@ -35,18 +36,16 @@ header{
 .header_centrale li{
     padding-right: 7px;}
 
-section{
-    padding: 15px 10%;
-}
-
 section:first-child{
-    background-color: blue;
-    justify-content: center;
-    align-items: center;}
+    background-color: blue;}
 
-#alone{width: 45%;
+#alone{width:45%;
     height: 200px;
     background-color: palevioletred;}
+
+.center{
+    justify-content: center;
+    align-items: center;}
 
 .small_box{
     width: calc(100% / 3);
@@ -57,12 +56,12 @@ section:first-child{
     background-color: aqua;
     width:calc(100% / 3 * 2) ;}
 
-.background_lightgrey{
+.bg_lightgrey{
     background-color: lightgrey;}
 
 .green_box{
     width: 100%;
-    height: 400px;
+    height: 350px;
     margin: auto;
     background-color: rgb(0, 128, 32);}
 
