--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     margin:auto;
     padding: 15px 0;
 }
-.container div{
+.container div:not(.small_column){
     border: 1px dashed black;}
 
 header{
@@ -53,7 +53,7 @@ section:first-child{
     height:200px;}
 
 .big_box{
-    background-color: aqua;
+    background-color:cyan;
     width:calc(100% / 3 * 2) ;}
 
 .bg_lightgrey{
@@ -61,10 +61,22 @@ section:first-child{
 
 .green_box{
     width: 100%;
-    height: 350px;
+    height: 300px;
     margin: auto;
     background-color: rgb(0, 128, 32);}
 
+.bg_black{
+    background-color: black;}
+.big_column{
+    width:calc(100% / 5 * 2);
+    background-color: pink;
+    height: 200px;}
+
+.small_column{
+    width: calc(100% / 5);
+    background-color:aqua;
+    border: 1px dashed white;
+}
 
 
 
